--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         tools:ignore="HardcodedDebugMode"
         tools:targetApi="31">
         <activity
-            android:name=".activities.PostRegistrationActivity"
+            android:name=".activities.AddEvent"
+            android:exported="true" />
+        <activity
+            android:name=".activities.ProfileActivity"
             android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
@@ -31,9 +34,7 @@
         </activity>
         <activity
             android:name=".activities.RegistrationActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:exported="false" />
