--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,12 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FansFun"
         tools:ignore="HardcodedDebugMode"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".activities.PostRegistrationActivity"
+            android:name=".activities.InsertJSON"
             android:exported="true" />
         <activity
-            android:name=".activities.InserJSON"
+            android:name=".activities.PostRegistrationActivity"
             android:exported="true" />
         <activity
             android:name=".activities.AddEvent"
@@ -31,7 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
