--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.ViewEvent"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.InsertJSON"
             android:exported="true" />
