--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         tools:ignore="HardcodedDebugMode"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ListaEventi"
+            android:exported="true" />
+        <activity
             android:name=".activities.ViewEvent"
             android:exported="true" />
         <activity
