--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,6 +19,9 @@
         android:theme="@style/Theme.FansFun"
         tools:ignore="HardcodedDebugMode"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.SearchEventList"
+            android:exported="false" />
         <activity
             android:name=".activities.ListaEventi"
             android:exported="true" />
@@ -43,9 +45,7 @@
             android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activities.RegistrationActivity"
             android:exported="true" />
