--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         tools:ignore="HardcodedDebugMode"
         tools:targetApi="31">
         <activity
+            android:name=".activities.MyEvents"
+            android:exported="false" />
+        <activity
             android:name=".activities.SearchEventList"
             android:exported="true" />
         <activity
@@ -45,7 +48,7 @@
             android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activities.RegistrationActivity"
             android:exported="true" />
