--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:debuggable="true"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/home_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/home_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.FansFun"
         tools:ignore="HardcodedDebugMode"
         tools:targetApi="31">
+
         <activity
             android:name=".activities.MyEvents"
             android:exported="false" />
