--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,43 +21,56 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.EditProfile"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activities.MyEvents"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activities.SearchEventList"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.ListaEventi"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.PrincipalActivity"
             android:windowSoftInputMode="adjustNothing"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.ViewEvent"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.InsertJSON"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.PostRegistrationActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.AddEvent"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.ProfileActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.RegistrationActivity"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
